# Smart-Power-Case

./: .gitignore  .travis.yml  CLI_HID  CMakeLists.txt  FatSharkPower.ioc  FatShark_Power_V1.ioc  FatShark_Power_V1.xml  README.md  STM32F103C8Tx_FLASH.ld  STM32F103T8Ux_FLASH.ld  STM32F103TBUx_FLASH.ld  stmf1xx-jlink.cfg
.github/workflows/: cloud_build.yml
Drivers/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Drivers/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_def.h
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h
HW/STL_File/: mid.STL  top.STL
Inc/: eepromConf.h  main.h  printf_USB.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usb_device.h  usbd_conf.h
Main_App/: BQ27441.c  BQ27441.h  BQ27441_Definitions.h  CLI_comands.h  Debug.c  Debug.h  HDQ.c  HDQ.h  OLED_UI.c  OLED_UI.h  OLED_UI_Screens.c  OLED_UI_Screens.h  Power.c  Power.h  Settings_Eeprom.c  Settings_Eeprom.h  adc.c  adc.h  button.c  button.h  main_app.c  main_app.h  tinyprintf.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Src/: dwt_stm32_delay.c  eeprom.c  main.c  main.h  printf_USB.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c  usbd_cdc_if.c
Src/cli/: cli.c  cli_config.h
Src/cli/lib/: cli_string.c
Src/device/: usbd_desc.c
Src/main_app/: adc.h  main_app.c  tinyprintf.c
Src/ssd1306/: ssd1306.h
Src/ssd1306/Fonts/: Font_8x10.c  Font_Let_21x21.c  fonts.h
Src/ssd1306/Image/: Image_Current_I.c  Image_Full_Mah_Ico.c  Image_Set_I_Max.c  Image_Set_V_Out.c
cli/: cli.c  cli_config.h
cli/lib/: cli_input.c  cli_log.c  cli_string.h  cli_time.h  static_memory.c
source/cli/lib/: cli_input.c  cli_input.h  static_memory.c
source/device/: usb_device.c
source/main_app/: BQ27441.h  adc.h
source/ssd1306/Fonts/: Font_10x20.c  Font_13x16.c  Font_25x27.c  Font_Let_Inv_9x13.c  fonts.h
source/ssd1306/Image/: Image_Battery_Status.c  Image_Buzzer.c  Image_Buzzer_On_Ico.c  Image_Current_Mah_Ico.c  Image_Get_Status_Info.c  Image_Power_On_Time.c  Image_QC_Ico.c  Image_Set_12V.c  Image_Vout_Ico.c
src/: main.c
src/bq25895/: bq2589x_reg.h
src/bq27441/: bq27441.c  bq27441.h
src/cli/: cli.c  cli.h  cli_config.h
src/cli/lib/: cli_input.c  cli_input.h  cli_log.c  cli_log.h  cli_queue.c  cli_queue.h  cli_string.c  cli_string.h  cli_time.c  cli_time.h  static_memory.c  static_memory.h  sys_call.c
src/device/: eeprom.h  printf_USB.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  system_stm32f1xx.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c
src/device/cli/: cli.c
src/device/cli/lib/: cli_input.c  static_memory.h
src/device/device/: dwt_stm32_delay.h  eeprom.c  eepromConf.h  printf_USB.c  printf_USB.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c  usb_device.h  usbd_cdc_if.c
src/device/main_app/: OLED_UI.c  Power.c  Settings_Eeprom.c  button.h
src/device/ssd1306/Fonts/: Font_16x24.c  Font_Let_15x21.c
src/device/ssd1306/Image/: Image_5V_Ico.c  Image_Charge_Count_Ico.c  Image_Current_In.c  Image_Remaining_Time.c  Image_Used_mAh.c
src/main_app/: CLI_comands.c  Debug.c  OLED_UI.h  Power.h  Settings_Eeprom.c  Settings_Eeprom.h  bq2589x_charger.c  bq2589x_charger.h  button.c  main_app.c  main_app.h  tinyprintf.c
src/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_defines.h
src/ssd1306/Fonts/: Font_10x15.c  Font_11x22.c  Font_18x26.c  Font_20x24.c  Font_24x17.c  Font_Let_9x13.c
src/ssd1306/Image/: Image_Apply.c  Image_Battery_Life_Ico.c  Image_Err_Ico.c  Image_Frame.c  Image_Frame_22x20.c  Image_Frame_27x27.c  Image_Set_8V.c  image.h
ssd1306/: ssd1306.c  ssd1306.h  ssd1306_defines.h
ssd1306/Fonts/: Font_10x15.c  Font_10x20.c  Font_11x22.c  Font_13x16.c  Font_16x24.c  Font_18x26.c  Font_20x24.c  Font_24x17.c  Font_25x27.c  Font_8x10.c  Font_Let_15x21.c  Font_Let_21x21.c  Font_Let_9x13.c  Font_Let_Inv_9x13.c  fonts.c  fonts.h
ssd1306/Image/: Image_Active_Ch.c  Image_B.c  Image_Battery_Type_Ico.c  Image_Buzzer_Off_Ico.c  Image_Calibrate.c  Image_Exit.c  Image_Exit_Menu.c  Image_Frame.c  Image_Scan.c  Image_Set_Capasity_Design.c  Image_Set_Low_Volt.c  Image_Set_Timer_Off.c  Image_Temperature_Ico.c  Image_Trash.c  Image_USB_Ico.c  Image_settings.c  image.h  image_Big_A.c  image_Big_B.c  image_Big_D.c  image_Big_E.c  image_Big_F.c  image_Big_R.c
